--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
     font-family: "Fira Sans";
     font-style: normal;
     font-weight: 700;
-    src: url("../fonts/firasans-bold-700.ttf") format("ttf");
+    src: url("../fonts/firasans-bold-700.woff2") format("woff2");
     font-display: swap;
 }
 
@@ -10,7 +10,7 @@
     font-family: "PT Sans";
     font-style: normal;
     font-weight: 400;
-    src: url("../fonts/ptsans-regular-400.ttf") format("ttf");
+    src: url("../fonts/ptsans-regular-400.woff2") format("woff2");
     font-display: swap;
 }
 
@@ -18,7 +18,7 @@
     font-family: "PT Sans";
     font-style: italic;
     font-weight: 400;
-    src: url("../fonts/ptsans-italic-400.ttf") format("ttf");
+    src: url("../fonts/ptsans-italic-400.woff2") format("woff2");
     font-display: swap;
 }
 
@@ -26,6 +26,10 @@
     font-family: "PT Sans";
     font-style: normal;
     font-weight: 700;
-    src: url("../fonts/ptsans-bold-700.ttf") format("ttf");
+    src: url("../fonts/ptsans-bold-700.woff2") format("woff2");
     font-display: swap;
+}
+
+.test {
+    font-family: "PT Sans", serif;
 }
