--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,85 +1,81 @@
 @font-face {
-    font-family: "Fira Sans";
-    font-style: normal;
-    font-weight: 700;
-    src:
-            url("../fonts/firasans-bold-700.woff2") format("woff2"),
-            url("../fonts/firasans-bold-700.woff") format("woff");
-    font-display: swap;
+  font-family: "Fira Sans";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/firasans-bold-700.woff2") format("woff2"),
+       url("../fonts/firasans-bold-700.woff") format("woff");
+  font-display: swap;
 }
 
 @font-face {
-    font-family: "PT Sans";
-    font-style: normal;
-    font-weight: 400;
-    src:
-            url("../fonts/ptsans-regular-400.woff2") format("woff2"),
-            url("../fonts/ptsans-regular-400.woff") format("woff");
-    font-display: swap;
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/ptsans-regular-400.woff2") format("woff2"),
+       url("../fonts/ptsans-regular-400.woff") format("woff");
+  font-display: swap;
 }
 
 @font-face {
-    font-family: "PT Sans";
-    font-style: italic;
-    font-weight: 400;
-    src:
-            url("../fonts/ptsans-italic-400.woff2") format("woff2"),
-            url("../fonts/ptsans-italic-400.woff") format("woff");
-    font-display: swap;
+  font-family: "PT Sans";
+  font-style: italic;
+  font-weight: 400;
+  src: url("../fonts/ptsans-italic-400.woff2") format("woff2"),
+       url("../fonts/ptsans-italic-400.woff") format("woff");
+  font-display: swap;
 }
 
 @font-face {
-    font-family: "PT Sans";
-    font-style: normal;
-    font-weight: 700;
-    src:
-            url("../fonts/ptsans-bold-700.woff2") format("woff2"),
-            url("../fonts/ptsans-bold-700.woff") format("woff");
-    font-display: swap;
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/ptsans-bold-700.woff2") format("woff2"),
+       url("../fonts/ptsans-bold-700.woff") format("woff");
+  font-display: swap;
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 img {
-    max-width: 100%;
-    object-fit: contain;
+  max-width: 100%;
+  object-fit: contain;
 }
 
 body {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    font-family: "PT Sans", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: #293449;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #293449;
 }
 
 /*Для паттерна Sticky footer*/
 .main-container {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    border: 0;
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /* Центровка страницы */
 .page-container {
-    width: 1170px;
-    margin: 0 auto;
-    padding-left: 115px;
-    padding-right: 115px;
+  width: 1170px;
+  margin: 0 auto;
+  padding-left: 115px;
+  padding-right: 115px;
 }
 
