--- a/styles/styles.css
+++ b/styles/styles.css
@@ -125,6 +125,7 @@ body {
 }
 
 /*Строка с логотипом*/
+/*Лого*/
 .logo-background {
   background-color: #293449;
 }
@@ -138,6 +139,7 @@ body {
   background-color: #ee3643;
   box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.24);
   margin-bottom: -5px;
+  flex-shrink: 0;
 }
 
 .navigation-logo img {
@@ -148,10 +150,25 @@ body {
   display: flex;
 }
 
+/*Поле поиска*/
+.search-container {
+  flex-grow: 1;
+}
+
 .search-field {
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
   line-height: 24px;
+  border: none;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 0 0 4px 53px;
+  background-color: transparent;
+}
+
+.search-form {
+  height: 100%;
 }
 
 .search-field::placeholder {
