--- a/styles/styles.css
+++ b/styles/styles.css
@@ -259,3 +259,9 @@ body {
   padding: 0;
   list-style-type: none;
 }
+
+.navigation-user-button {
+  background-color: #63a63e;
+  border-radius: 4px;
+  padding: 12px 10px;
+}
