--- a/styles/styles.css
+++ b/styles/styles.css
@@ -153,6 +153,7 @@ body {
   box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.24);
   margin-bottom: -5px;
   flex-shrink: 0;
+  z-index: 1;
 }
 
 .navigation-logo img {
