--- a/styles/styles.css
+++ b/styles/styles.css
@@ -234,6 +234,13 @@ body {
 }
 
 /*Навигация*/
+.header-navigation {
+  display: grid;
+  grid-template-columns: 820px 178px 174px;
+  align-items: start;
+  justify-items: start;
+}
+
 .navigation-background {
   background-color: #3d546f;
 }
@@ -278,13 +285,17 @@ body {
 }
 
 .navigation-user {
-  margin: 0;
+  margin: 23px 27px 0;
   padding: 0;
   list-style-type: none;
+  display: flex;
+  justify-self: end;
+  gap: 25px;
 }
 
 .navigation-user-button {
   background-color: #63a63e;
   border-radius: 4px;
-  padding: 12px 10px;
+  margin-top: 11px;
+  padding: 12px 12px;
 }
