--- a/styles/styles.css
+++ b/styles/styles.css
@@ -317,9 +317,29 @@ body {
 .card-item {
   padding: 20px 25px;
   background-color: #ffbf47;
+}
+
+/*Ярлык новинки*/
+.new-item {
+  position: relative;
   background-image:
     linear-gradient(45deg, rgba(0,0,0,0) 341px, rgba(238,54,67,1) 341px, rgba(238,54,67,1) 371px, rgba(0,212,255,0) 371px)
-  }
+}
+
+.new-item::before {
+  position: absolute;
+  content: "new";
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  color: #ffffff;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  transform: rotate(45deg);
+  top: 14px;
+  right: 4px;
+}
 
 .card-item:nth-child(2) {
   background-color: #3bbce3;
