--- a/styles/styles.css
+++ b/styles/styles.css
@@ -353,6 +353,11 @@ body {
   background-color: #8ed78f;
 }
 
+/*Подгон для Pixel Perfect*/
+.card-item:nth-child(2) .card-button {
+  padding: 11px 16px 9px 27px;
+}
+
 .card-title {
   margin: 0;
   font-size: 24px;
