исправил изображение для слайдера

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -420,20 +420,26 @@ body {
 }
 
 /*Слайдер*/
-.slider {
-  padding: 0;
-  list-style-type: none;
-}
-
 .slider-item {
   grid-column: 1 / span 2;
   grid-row: 2 / span 2;
+  padding: 0;
+}
+
+.slider {
+  padding: 0;
+  height: 100%;
+  list-style-type: none;
+}
+
+.inner-slider-item {
+  height: 100%;
   background-image: url("../images/main/cards/slider/dreels.jpg");
   background-repeat: no-repeat;
   background-size: 910px 390px;
   background-position: -70px;
-  position: relative;
 }
+
 
 .inner-card-title {
   font-family: "Fira Sans",sans-serif;
@@ -441,7 +447,7 @@ body {
   line-height: 42px;
   text-transform: uppercase;
   color: #ffffff;
-  margin: 30px 0 11px 26px;
+  margin: 0 0 11px 26px;
 }
 
 .slider-description {
@@ -469,6 +475,7 @@ body {
   background-image: url("../images/main/cards/slider/slider-arrow.svg");
   background-color: transparent;
   cursor: pointer;
+  z-index: 1;
 }
 
 .slider-button:last-child {
