--- a/styles/styles.css
+++ b/styles/styles.css
@@ -312,6 +312,7 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 370px);
   gap: 29px 30px;
+  align-items: start;
 }
 
 .card-item {
@@ -356,7 +357,7 @@ body {
 .new-item {
   position: relative;
   background-image:
-    linear-gradient(45deg, rgba(0,0,0,0) 341px, rgba(238,54,67,1) 341px, rgba(238,54,67,1) 371px, rgba(0,212,255,0) 371px)
+    linear-gradient(45deg, rgba(0,0,0,0) 88%, rgba(238,54,67,1) 88%, rgba(238,54,67,1) 95.5%, rgba(0,212,255,0) 95.5%)
 }
 
 .new-item::before {
@@ -428,12 +429,11 @@ body {
 
 .slider {
   padding: 0;
-  height: 100%;
   list-style-type: none;
 }
 
 .inner-slider-item {
-  height: 100%;
+  min-height: 390px;
   background-image: url("../images/main/cards/slider/dreels.jpg");
   background-repeat: no-repeat;
   background-size: 910px 390px;
@@ -447,12 +447,12 @@ body {
   line-height: 42px;
   text-transform: uppercase;
   color: #ffffff;
-  margin: 0 0 11px 51px;
+  margin: 0 51px 11px;
   padding-top: 50px;
 }
 
 .slider-description {
-  margin: 0 0 0 51px;
+  margin: 0 51px 0;
   font-weight: 700;
   font-size: 18px;
   color: #ffffff;
