--- a/styles/styles.css
+++ b/styles/styles.css
@@ -464,7 +464,7 @@ body {
   display: flex;
   justify-content: space-between;
   position: absolute;
-  top: 44.5%;
+  top: 44%;
   left: 20px;
 }
 
@@ -502,7 +502,7 @@ body {
   text-decoration: none;
   display: inline-block;
   position: absolute;
-  bottom: 46px;
+  bottom: 49px;
   left: 52px;
   z-index: 1;
 }
@@ -512,12 +512,14 @@ body {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  width: 100%;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 8px;
   position: absolute;
-  bottom: 17px;
-  left: 47.6%;
+  bottom: 20px;
+  left: 1px;
   z-index: 1;
 }
 
