--- a/styles/styles.css
+++ b/styles/styles.css
@@ -562,9 +562,20 @@ body {
   grid-area: filter;
 }
 
+.filter-title {
+  font-weight: 700;
+  color: #000000;
+}
+
 /*Стоимость*/
 .cost {
-
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  border: none;
+  display: grid;
+  grid-template-columns: repeat(2, 95px);
+  gap: 30px;
 }
 
 /*Производители*/
