--- a/styles/styles.css
+++ b/styles/styles.css
@@ -305,6 +305,10 @@ body {
 }
 
 /*Карточки навигации*/
+.cards-of-navigation {
+  margin-bottom: 50px;
+}
+
 .cards-list {
   margin: 52px 0 0;
   padding: 0;
@@ -319,6 +323,7 @@ body {
   padding: 20px 25px;
   background-color: #ffbf47;
   position: relative;
+  border-radius: 2px;
 }
 
 .card-item::after {
@@ -565,11 +570,12 @@ body {
 .filter-title {
   font-weight: 700;
   color: #000000;
+  text-transform: uppercase;
 }
 
 /*Стоимость*/
 .cost {
-  margin: 0;
+  margin: 24px 0 0 -2px;
   padding: 0;
   width: 200px;
   border: none;
@@ -579,11 +585,23 @@ body {
 }
 
 .range-scale {
+  position: relative;
   height: 2px;
   background-color: #3d546f;
-  position: relative;
   grid-column: span 2;
-  margin-top: 28px;
+  margin: 28px 20px 0 28px;
+}
+
+.range-scale::before {
+  position: absolute;
+  content: "";
+  width: calc(100% + 48px);
+  height: 40px;
+  background-color: #f7f3ec;
+  top: -18px;
+  left: -28px;
+  z-index: -1;
+  border-radius: 4px;
 }
 
 .range-bar {
