--- a/styles/styles.css
+++ b/styles/styles.css
@@ -806,15 +806,52 @@ body {
   appearance: none;
   border: 1px solid #3d546f;
   border-radius: 2px;
-  min-width: 280px;
-  background-image: url(../images/main/catalog/selcetor-icon.svg);
+  min-width: 279px;
+  background-image: url("../images/main/catalog/selcetor-icon.svg");
   background-repeat: no-repeat;
-  background-position: bottom 17px right 12px;
-  margin: 60px 0 35px 53px;
+  background-position: bottom 16px right 12px;
+  margin: 60px 0 0 53px;
   padding: 7px 28px 7px 14px;
 }
 
 /*Результат поиска*/
 .search-result {
   grid-area: result;
+}
+
+.result-list {
+  list-style-type: none;
+  margin: 30px 0 0 52px;
+  padding: 0;
+}
+
+.result-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #eaeaea;
+  border-radius: 2px;
+  box-sizing: border-box;
+  width: 270px;
+}
+
+.result-item.new-item {
+  background-image: linear-gradient(45deg, rgba(0,0,0,0) 89%, rgba(238,54,67,1) 89%, rgba(238,54,67,1) 96%, rgba(0,212,255,0) 96%);
+}
+
+.result-item.new-item::before {
+  top: 16px;
+  right: 6px;
+}
+
+.product-picture {
+  margin-top: 27px;
+  z-index: -1;
+}
+
+.item-title {
+  font-size: 20px;
+  line-height: 26px;
+  text-align: center;
+  margin: 14px 40px 0;
 }
