--- a/styles/styles.css
+++ b/styles/styles.css
@@ -855,3 +855,23 @@ body {
   text-align: center;
   margin: 14px 40px 0;
 }
+
+.old-price {
+  position: relative;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 2px;
+  color: #a9a9a9;
+  margin: 15px 3px 0;
+}
+
+.middle-line::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: #a9a9a9;
+  top: 9px;
+  left: 0;
+}
