--- a/styles/styles.css
+++ b/styles/styles.css
@@ -823,6 +823,9 @@ body {
   list-style-type: none;
   margin: 30px 0 0 52px;
   padding: 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 29px 30px;
 }
 
 .result-item {
@@ -833,6 +836,7 @@ body {
   border-radius: 2px;
   box-sizing: border-box;
   width: 270px;
+  min-height: 380px;
 }
 
 .result-item.new-item {
@@ -891,6 +895,6 @@ body {
   background-repeat: no-repeat;
   background-color: transparent;
   cursor: pointer;
-  margin: 9px 0 24px -2px;
+  margin: auto 0 24px -2px;
   padding: 0 14px 0 0;
 }
