--- a/styles/styles.css
+++ b/styles/styles.css
@@ -490,6 +490,7 @@ body {
 
 /*Общая красная кнопка*/
 .red-button {
+  font-family: "PT Sans", sans-serif;
   font-weight: 700;
   font-size: 14px;
   line-height: 18px;
@@ -898,4 +899,44 @@ body {
   cursor: pointer;
   margin: auto 0 24px -2px;
   padding: 0 14px 0 0;
+}
+
+/*Пагинация*/
+.pagination-container {
+  display: flex;
+  gap: 17px;
+  justify-content: center;
+  margin: 31px 20px 0 72px;
+}
+
+.catalog-pagination-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.catalog-pagination-link-inner {
+  text-decoration: none;
+  display: inline-block;
+  min-width: 50px;
+  background: #3d546f;
+  border-radius: 2px;
+  text-align: center;
+  color: #ffffff;
+  padding: 11px 0;
+  box-sizing: border-box;
+}
+
+.present-page {
+  background-color: #ffffff;
+  color: #3d546f;
+}
+
+.show-more-button {
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
 }
