--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1054,3 +1054,31 @@ body {
 .main-footer {
   background-color: #32425c;
 }
+
+.footer-text {
+  font-style: normal;
+  color: #f3f7f9;
+}
+
+.footer-number {
+  text-decoration: none;
+  color: #f3f7f9;
+}
+
+/*Social*/
+.social-link {
+  display: block;
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 36px;
+  height: 36px;
+  box-sizing: border-box;
+  border-radius: 50%;
+}
+
+.social-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
