--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1055,6 +1055,11 @@ body {
   background-color: #32425c;
 }
 
+.footer-logo {
+  width: 224px;
+  height: 55px;
+}
+
 .footer-text {
   font-style: normal;
   color: #f3f7f9;
