--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1052,6 +1052,8 @@ body {
 
 /*Футер*/
 .main-footer {
+  display: flex;
+  justify-content: space-between;
   background-color: #32425c;
 }
 
@@ -1098,4 +1100,29 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 5px;
+}
+
+/*Правая колонка*/
+.right-column {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.feedback {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 29px;
+}
+
+.feedback-e-mail {
+  color: #ffd180;
+  text-decoration: none;
+  margin-top: 2px;
+}
+
+.subscribe-description  {
+  color: #ffffff;
+  margin: 29px 0 0;
 }
