--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1056,6 +1056,7 @@ body {
   justify-content: space-between;
   background-color: #32425c;
   gap: 220px;
+  padding-bottom: 35px;
 }
 
 .footer-logo {
