--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1056,7 +1056,8 @@ body {
   justify-content: space-between;
   background-color: #32425c;
   gap: 220px;
-  padding-bottom: 35px;
+  padding-bottom: 11px;
+  box-shadow: inset 0 -60px 0 #293449;
 }
 
 .footer-logo {
@@ -1118,7 +1119,7 @@ body {
   margin-top: 29px;
 }
 
-.feedback-e-mail {
+.footer-link {
   color: #ffd180;
   text-decoration: none;
   margin-top: 2px;
@@ -1161,4 +1162,15 @@ body {
   width: 40px;
   height: 100%;
   padding-top: 3px;
+}
+
+.copyright {
+  margin: 57px 0px 10px -1px;
+  font-size: 14px;
+  line-height: 18px;
+  color: #ffffff;
+}
+
+.right-column .copyright {
+  margin: 63px 1px 0 0;
 }
