--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1052,12 +1052,13 @@ body {
 
 /*Футер*/
 .main-footer {
+  background-color: #32425c;
+}
+
+.footer-content-container {
   display: flex;
   justify-content: space-between;
-  background-color: #32425c;
-  gap: 220px;
-  padding-bottom: 11px;
-  box-shadow: inset 0 -60px 0 #293449;
+  gap: 0 220px;
 }
 
 .footer-logo {
@@ -1162,6 +1163,16 @@ body {
   width: 40px;
   height: 100%;
   padding-top: 3px;
+}
+
+/*Copyright*/
+.copyright-background {
+  background-color: #293449;
+}
+
+.copyright-content {
+  display: flex;
+  justify-content: space-between;
 }
 
 .copyright {
