основа закончена, переполнене сделано

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1059,6 +1059,7 @@ body {
   display: flex;
   justify-content: space-between;
   gap: 0 220px;
+  margin-bottom: 36px;
 }
 
 .footer-logo {
@@ -1111,6 +1112,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  max-width: 350px;
 }
 
 .feedback {
@@ -1173,15 +1175,15 @@ body {
 .copyright-content {
   display: flex;
   justify-content: space-between;
+  padding: 20px 4px 22px 3px;
+  gap: 0 220px;
 }
 
 .copyright {
-  margin: 57px 0px 10px -1px;
+  margin: 0 0 0 -1px;
   font-size: 14px;
   line-height: 18px;
   color: #ffffff;
+  max-width: 472px;
 }
 
-.right-column .copyright {
-  margin: 63px 1px 0 0;
-}
