--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,6 +260,14 @@ body {
   margin: 0;
 }
 
+.close-popover-button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  width: 16px;
+  height: 16px;
+}
+
 .text-field {
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
